scss/main.scss
@import "config";
@import "menu";

//High Level Styling
* {
  box-sizing: border-box;
}

body {
  @include background;
  background: $primary-color;
  color: set-text-color($primary-color);
  height: 100vh;
  margin: 0;
  padding: 0;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  line-height: 1.5;
  //overflow-y: hidden;
}

//Headings
h1,
h2,
h3,
h6 {
  margin: 0;
  font-weight: 400;

  &.lg-heading {
    font-size: 6rem;
  }
  &.sm-heading {
    margin-bottom: 2rem;
    padding: 0.2rem 1rem;
    background: rbga(lighten($primary-color, 2), 0.5);
  }
}

a {
  color: #ffffff;
  text-decoration: none;
}

header {
  position: fixed;
  z-index: 2;
  width: 100%;
}

.text-secondary {
  color: $secondary-color;
}

main {
  padding: 4rem;
  margin: 0;
  min-height: calc(100vh - 60px);

  .icons {
    margin-top: 1rem;

    a {
      padding: 0.4rem;

      &:hover {
        color: $secondary-color;
        @include easeOut();
      }
    }
  }
  &#home {
    overflow: hidden;
    h1 {
      margin-top: 20vh;
    }
  }

  &#about {
    overflow: hidden;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    padding: 0;
  }
}
.about-heading {
  font-size: 5rem;
}

.about-info {
  display: grid;
  grid-gap: 30px;
  grid-template-areas:
    "bioimage bio bio"
    "job1 job2 job3";
  grid-template-columns: repeat(3, 1fr);
  line-height: normal;

  .bio-image {
    grid-area: bioimage;
    margin: auto;
    border-radius: 50%;
    border: $secondary-color 3px solid;
  }

  .bio {
    grid-area: bio;
    font-size: 1.25rem;
  }

  .job-1 {
    grid-area: job1;
  }

  .job-2 {
    grid-area: job2;
  }

  .job-3 {
    grid-area: job3;
  }

  .job {
    background: lighten($primary-color, 5);
    padding: 0.5rem;
    border-bottom: $secondary-color 5px solid;
  }
}

//Projects Page
.Projects {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 0.7rem;

  img {
    width: 100%;
    border: 3px #ffffff solid;

    &:hover {
      opacity: 0.5;
      border-color: $secondary-color;
      @include easeOut;
    }
  }
}

//Contact Page
.boxes {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  align-items: center;
  margin-top: 1rem;

  div {
    font-size: 2rem;
    border: 3px white solid;
    padding: 1.5rem 2.5rem;
    margin-bottom: 3rem;
    @include easeOut;

    &:hover {
      padding: 0.5rem 1.5rem;
      background: $secondary-color;
      color: set-text-color($secondary-color);
      span {
        color: set-text-color($secondary-color);
      }
    }
  }
}

.contact-us-wrapper {
  max-width: 51rem;
  margin: 0 auto;
}

.contact-us-title {
  font-size: 1.5rem;
  margin-bottom: 0.2rem;
}

.contact-us-subtitle {
  font-size: 1.3rem;
  margin-top: 0;
}

.contact-us-form {
  padding: 1rem;
  display: grid;
  grid-auto-rows: 2rem;
  grid-row-gap: 0.5rem;
}

.contact-us-form label {
  font-weight: bold;
}

.contact-us-form label,
.contact-us-form input {
  display: block;
  width: 100%;
}

.contact-us-form input:focus {
  outline: none;
  background: #ece7e7;
  border-color: $secondary-color;
}

.contact-us-form input.invalid,
.contact-us-form select.invalid,
.contact-us-form.needs-validation :invalid {
  border: 1px solid red !important;
  background-color: #ff8e8e;
}

label[for="name"] {
  grid-row: 1 / 2;
}

#name {
  grid-row: 2 / 3;
  grid-column: 1 / 2;
}

label[for="contact-email"] {
  grid-row: 3 / 4;
}

#contact-email {
  grid-row: 4 / 5;
}

label[for="subject"] {
  grid-row: 5 / 6;
}

#subject {
  grid-row: 6 / 7;
}

label[for="message"] {
  grid-row: 7 / 8;
}

#message {
  grid-row: 8/ 13;
}

form button[type="submit"] {
  grid-row: 13 / 14;
}

//Button Styles
.btn {
  display: block;
  padding: 0.5rem 1rem;
  border: 0;
  margin-bottom: 0.3rem;
  &hover {
    background: $secondary-color;
    color: set-text-color($secondary-color);
  }
}

.btn-dark {
  @extend .btn;
  background: darken($primary-color, 50);
  color: #ffffff;
}

.btn-light {
  @extend .btn;
  background: lighten($primary-color, 50);
  color: #333;
}

#main-footer {
  text-align: center;
  padding: 1rem;
  background: darken($primary-color, 10);
  color: set-text-color($primary-color);
  height: 60px;
}

@import "mobile";

